--- a/www.hookamonk.com/src/html/index.njk
+++ b/www.hookamonk.com/src/html/index.njk
@@ -33,15 +33,15 @@
           <img title="Hookamonk box product photo"
                alt="[photo] Hookamonk box product photo"
                width="600px"
-               src="{{ "/hookamonk.com/img_header-7.png" | cloudinaryUrl(width=600) }}"
-               srcset="{{ "/hookamonk.com/img_header-7.png" | cloudinaryUrl(width=600) }} 1x,
-                     {{ "/hookamonk.com/img_header-7.png" | cloudinaryUrl(width=600,dpr=1.5) }} 1.5x,
-                     {{ "/hookamonk.com/img_header-7.png" | cloudinaryUrl(width=600,dpr=2) }} 2x"/>
+               src="{{ "/hookamonk.com/img_header-8.png" | cloudinaryUrl(width=600) }}"
+               srcset="{{ "/hookamonk.com/img_header-8.png" | cloudinaryUrl(width=600) }} 1x,
+                     {{ "/hookamonk.com/img_header-8.png" | cloudinaryUrl(width=600,dpr=1.5) }} 1.5x,
+                     {{ "/hookamonk.com/img_header-8.png" | cloudinaryUrl(width=600,dpr=2) }} 2x"/>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <p class="title__prefix">We present warp</p>
-          <h1>Game <span class="text--orange"><strong>changer</strong></span> in hookah world</h1>
-          <p class="title__suffix">First fully electronic hookah set for tobacco.</p>
+          <h1>Game <span class="text--white"><strong>changer</strong></span> in hookah world</h1>
+          <p class="title__prefix">First fully electronic hookah set for tobacco.</p>
           <button class="button button__contained button__contained--dark">
             <a href="#features" class="button__label">Discover more</a>
           </button>
