--- a/www.hookamonk.com/src/stylesheets/v2/typography.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/typography.scss
@@ -87,7 +87,7 @@ p {
     font-size: 16px;
     font-weight: 600;
     line-height: 18px;
-    color: var(--hm-grey--light);
+    color: var(--hm-white);
     text-transform: uppercase;
 }
 
