Hookamonk web - úpravy

--- a/www.hookamonk.com/src/html/components/header2.njk
+++ b/www.hookamonk.com/src/html/components/header2.njk
@@ -64,9 +64,7 @@
                     fill="#000"/>
             </svg>
           </a>
-          <button class="button button__outlined">
-            <a href="#warp" class="button__label">I want Warp</a>
-          </button>
+          <a class="button button__contained--gradient" href="#warp" class="button__label">I want Warp</a>
         </div>
         <div class="tm-hamburger mdc-layout-grid__cell">
           <div class="tm-hamburger__container">
@@ -83,7 +81,7 @@
       <p>Navigation</p>
       <li><a href="/for-home">For home</a></li>
       <li><a href="/for-workspace">For workspace</a></li>
-      <li><a href="mailto:sales@hookamonk.com?subject=I want Warp for hookah lounge" rel="noopener">For hookah lounge</a></li>
+      <li><a href="/for-lounge" rel="noopener">For hookah lounge</a></li>
 
       <br><p>External links</p>
       <li><a href="https://shop.hookamonk.com/">E-shop</a></li>
