--- a/www.hookamonk.com/src/html/for-home/index.njk
+++ b/www.hookamonk.com/src/html/for-home/index.njk
@@ -30,16 +30,14 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-          <h1>For <span class="text--orange"><strong>Home</strong></span></h1>
+          <h1>For Home</h1>
           <ul>
             <li>✔︎ Fixed monthly fee</li>
             <li>✔︎ Transparent pricing</li>
             <li>✔︎ No hidden charges</li>
             <li>✔︎ For personal use only</li>
-          </ul>
-          <button class="button button__contained button__contained--orange">
-            <a href="#hm-warp" class="button__label">Next</a>
-          </button>
+          </ul><br>
+          <a class="button button__contained button__contained--light" href="#hm-warp">Next</a>
         </div>
         <div
           class="hm-intro__header-bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop wow bounceInLeft zoom">
@@ -128,9 +126,7 @@
             <input type="text" name="email" placeholder="Email" required/>
             <input type="number" name="telephone" placeholder="Telephone"/>
             <textarea rows="4" cols="50" name="message" form="contact-form" placeholder="Enter text here..."></textarea><br>
-            <button class="button button__contained button__contained--orange" type="submit">
-              <a class="button__label">Submit</a>
-            </button>
+            <a class="button button__contained button__contained--light" type="submit">Submit</a>
           </form>
         </div>
         <script type="module">
