--- a/www.hookamonk.com/src/html/for-workspace/index.njk
+++ b/www.hookamonk.com/src/html/for-workspace/index.njk
@@ -30,7 +30,7 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-          <h1>For <span class="text--orange"><strong>Workspace</strong></span></h1>
+          <h1>For Workspace</h1>
           <ul>
             <li>✔︎ No initial down payment</li>
             <li>✔︎ Monthly rental charge</li>
@@ -59,7 +59,7 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
         <div class="hm-about__text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Looking for a <span class="text--orange">new</span></h2>
+          <h2>Looking for a new</h2>
           <p>Unique element for your office, agency, hub or a business event?</p>
           <p>Whether you like to enjoy smoking hookah by yourself, with your colleagues & friends or business partners,
             it can help you concentrate on your tasks, improve your productivity, set a rather informal atmosphere for
@@ -121,7 +121,7 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
         <div class="hm-submit-form__content mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop">
-          <h2>Get in <span class="text--orange">Touch</span></h2>
+          <h2>Get in Touch</h2>
           <div id="contact-container">
             <form id="contact-form" action="https://hookamonk-api.monks.cloud/v1/contact-form" method="POST">
               <input type="hidden" name="productName" value="Warp for workspace"/>
