--- a/www.hookamonk.com/src/html/index.njk
+++ b/www.hookamonk.com/src/html/index.njk
@@ -29,7 +29,8 @@
   <section class="hm-intro">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
-        <div class="hm-intro__header-bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop wow bounceInLeft zoom">
+        <div
+          class="hm-intro__header-bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop wow bounceInLeft zoom">
           <img title="Hookamonk box product photo"
                alt="[photo] Hookamonk box product photo"
                width="600px"
@@ -41,10 +42,9 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <p class="title__prefix">We present warp</p>
           <h1>Game <span class="text--white"><strong>changer</strong></span> in hookah world</h1>
-          <p class="title__prefix">First fully electronic hookah set for tobacco.</p>
-          <button class="button button__contained button__contained--dark">
-            <a href="#features" class="button__label">Discover more</a>
-          </button>
+          <p class="title__prefix">First fully electronic hookah set for tobacco.</p><br>
+              <a class="button button__contained button__contained--light " href="#features">Discover
+                more</a>
         </div>
       </div>
     </div>
@@ -58,17 +58,20 @@
           <h2>Key features</h2>
         </div>
         <div class="hm-features__content mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop card">
-            <div class="material-icons material-icons--neutral">
-              <svg viewBox="0 0 24 24">
-                <path fill="currentColor"
-                      d="M16.56,5.44L15.11,6.89C16.84,7.94 18,9.83 18,12A6,6 0 0,1 12,18A6,6 0 0,1 6,12C6,9.83 7.16,7.94 8.88,6.88L7.44,5.44C5.36,6.88 4,9.28 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12C20,9.28 18.64,6.88 16.56,5.44M13,3H11V13H13"/>
-              </svg>
+          <div class="material-icons material-icons--neutral">
+            <svg viewBox="0 0 24 24">
+              <path fill="currentColor"
+                    d="M16.56,5.44L15.11,6.89C16.84,7.94 18,9.83 18,12A6,6 0 0,1 12,18A6,6 0 0,1 6,12C6,9.83 7.16,7.94 8.88,6.88L7.44,5.44C5.36,6.88 4,9.28 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12C20,9.28 18.64,6.88 16.56,5.44M13,3H11V13H13"/>
+            </svg>
           </div>
           <div class="wrap-collabsible">
             <input id="collapsible1" class="toggle" type="checkbox">
             <label for="collapsible1" class="lbl-toggle" tabindex="0">
               <h3>Say goodbye to charcoals</h3><br>
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000">
+                <path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/>
+                <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/>
+              </svg>
             </label>
             <div class="collapsible-content">
               <div class="content-inner"><p>Warp is completely charcoal-less hookah. Tobacco is heated by spirals
@@ -89,7 +92,10 @@
             <input id="collapsible2" class="toggle" type="checkbox">
             <label for="collapsible2" class="lbl-toggle" tabindex="0">
               <h3>Less staff needed</h3><br>
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000">
+                <path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/>
+                <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/>
+              </svg>
             </label>
             <div class="collapsible-content">
               <div class="content-inner"><p>You only need a shishaman to fill the bowl with tobacco. Warp does the rest
@@ -111,7 +117,10 @@
             <input id="collapsible3" class="toggle" type="checkbox">
             <label for="collapsible3" class="lbl-toggle" tabindex="0">
               <h3>Pay per use</h3><br>
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000">
+                <path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/>
+                <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/>
+              </svg>
             </label>
             <div class="collapsible-content">
               <div class="content-inner"><p>You will pay us at the end of each month based on the number of sessions
@@ -133,7 +142,10 @@
             <input id="collapsible4" class="toggle" type="checkbox">
             <label for="collapsible4" class="lbl-toggle" tabindex="0">
               <h3>First electronic hookah</h3><br>
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000">
+                <path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/>
+                <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/>
+              </svg>
             </label>
             <div class="collapsible-content">
               <div class="content-inner"><p>There is no e-liquid in Warp. You can use any tobacco you love and enjoy its
@@ -155,7 +167,10 @@
             <input id="collapsible5" class="toggle" type="checkbox">
             <label for="collapsible5" class="lbl-toggle" tabindex="0">
               <h3>Complete set provided</h3><br>
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000">
+                <path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/>
+                <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/>
+              </svg>
             </label>
             <div class="collapsible-content">
               <div class="content-inner"><p>Hookamonk consists of hooka box, computer and the electronic head with our
@@ -178,7 +193,10 @@
             <input id="collapsible6" class="toggle" type="checkbox">
             <label for="collapsible6" class="lbl-toggle" tabindex="0">
               <h3>Lounge app</h3><br>
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000">
+                <path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/>
+                <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/>
+              </svg>
             </label>
             <div class="collapsible-content">
               <div class="content-inner"><p>The Lounge App helps the lounge staff to manage Warp devices. It features an
@@ -200,7 +218,10 @@
             <input id="collapsible7" class="toggle" type="checkbox">
             <label for="collapsible7" class="lbl-toggle" tabindex="0">
               <h3>Consistent and full taste</h3><br>
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000">
+                <path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/>
+                <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/>
+              </svg>
             </label>
             <div class="collapsible-content">
               <div class="content-inner"><p>With Warp, the taste of tobacco remains full and constant during the entire
@@ -221,7 +242,10 @@
             <input id="collapsible8" class="toggle" type="checkbox">
             <label for="collapsible8" class="lbl-toggle" tabindex="0">
               <h3>No burnt furniture</h3><br>
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000">
+                <path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/>
+                <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/>
+              </svg>
             </label>
             <div class="collapsible-content">
               <div class="content-inner"><p>Charcoals can easily burn your precious club furniture. No more burn marks
@@ -243,7 +267,10 @@
             <input id="collapsible9" class="toggle" type="checkbox">
             <label for="collapsible9" class="lbl-toggle" tabindex="0">
               <h3>Smart inhale detection</h3><br>
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000">
+                <path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/>
+                <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/>
+              </svg>
             </label>
             <div class="collapsible-content">
               <div class="content-inner"><p>Warp electronic head reacts to inhales. The tobacco heats up only when you
@@ -265,7 +292,10 @@
             <input id="collapsible10" class="toggle" type="checkbox">
             <label for="collapsible10" class="lbl-toggle" tabindex="0">
               <h3>Intensity regulation</h3><br>
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000">
+                <path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/>
+                <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/>
+              </svg>
             </label>
             <div class="collapsible-content">
               <div class="content-inner"><p>Whether you like your hookah stronger or smoother, you can change its
@@ -286,7 +316,10 @@
             <input id="collapsible11" class="toggle" type="checkbox">
             <label for="collapsible11" class="lbl-toggle" tabindex="0">
               <h3>Features updated automatically</h3><br>
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000">
+                <path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/>
+                <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/>
+              </svg>
             </label>
             <div class="collapsible-content">
               <div class="content-inner"><p>Warp is kept up to date thanks to its wi-fi connection. All our devices are
@@ -307,7 +340,10 @@
             <input id="collapsible12" class="toggle" type="checkbox">
             <label for="collapsible12" class="lbl-toggle" tabindex="0">
               <h3>Mobile app</h3><br>
-              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/><path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000">
+                <path d="M24 24H0V0h24v24z" fill="none" opacity=".87"/>
+                <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"/>
+              </svg>
             </label>
             <div class="collapsible-content">
               <div class="content-inner"><p>Mobile app for Android and iOS. You can use it to change the intensity of
@@ -529,10 +565,8 @@
             ✓ Transparent pricing<br>
             ✓ No hidden charges<br>
             ✓ For personal use only
-          </p>
-          <button class="button button__contained button__contained--white">
-            <a href="/for-home" class="button__label">Next</a>
-          </button>
+          </p><br>
+       <a class="button button__contained button__contained--light " href="/for-home">Next</a>
         </div>
         <div class="hm-warp__type hm-warp__type--b2c mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop zoom">
           <h3>For workspace</h3>
@@ -540,18 +574,16 @@
             ✓ Monthly rental charge<br>
             ✓ Transparent pricing<br>
             ✓ Additional services
-          </p>
-          <button class="button button__contained button__contained--white">
-            <a href="/for-workspace" class="button__label">Next</a>
-          </button>
+          </p><br>
+          <a class="button button__contained button__contained--light " href="/for-workspace">Next</a>
         </div>
         <div class="hm-warp__type hm-warp__type--b2d mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop zoom">
           <h3>For hookah lounge</h3>
           <p>✓ No initial down payment<br>
-            ✓ Monthly payments based on the number of Warp sessions served</p>
-          <button class="button button__contained button__contained--white">
-            <a href="mailto:sales@hookamonk.com?subject=I want Warp for hookah lounge" rel="noopener" class="button__label">Next</a>
-          </button>
+            ✓ Monthly payments based on the number of Warp sessions served</p><br>
+      <a class="button button__contained button__contained--light "
+                  href="/for-lounge" rel="noopener">Next</a>
+
         </div>
       </div>
     </div>
@@ -854,7 +886,8 @@
               <p>Durable, elegant and well manufactured hookah for a lifetime daily use.</p>
             </div>
             <div class="hm-product-type__link">
-              <a href="https://shop.hookamonk.com/nebulla/" title="Nebulla Hookah" rel="noopener" target="_blank">More info</a>
+              <a href="https://shop.hookamonk.com/nebulla/" title="Nebulla Hookah" rel="noopener" target="_blank">More
+                info</a>
             </div>
           </div>
         </div>
@@ -870,7 +903,8 @@
               <p>Treat yourself and your friends with our unique hookah accessories.</p>
             </div>
             <div class="hm-product-type__link">
-              <a href="https://shop.hookamonk.com/accessories/" title="Hookah Acessories" rel="noopener" target="_blank">More info</a>
+              <a href="https://shop.hookamonk.com/accessories/" title="Hookah Acessories" rel="noopener"
+                 target="_blank">More info</a>
             </div>
           </div>
         </div>
