--- a/www.hookamonk.com/src/html/v2/for-home/index.njk
+++ b/www.hookamonk.com/src/html/v2/for-home/index.njk
@@ -37,9 +37,7 @@
             <li>✔︎ No hidden charges</li>
             <li>✔︎ For personal use only</li>
           </ul>
-          <button class="button button__contained button__contained--orange">
-            <a href="#hm-warp" class="button__label">Next</a>
-          </button>
+          <a class="button button__contained button__contained--light" href="#hm-warp">Next</a>
         </div>
         <div
           class="hm-intro__header-bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop wow bounceInLeft zoom">
@@ -126,9 +124,7 @@
           <input type="text" name="email" placeholder="Email"  required>
           <input type="number" name="phone" placeholder="Telephone"  required>
           <textarea rows="4" cols="50" name="comment" form="usrform" placeholder="Enter text here..."></textarea><br>
-          <button class="button button__contained button__contained--orange">
-            <a type="submit" href="#about" class="button__label">Submit</a>
-          </button>
+          <a class="button button__contained button__contained--light" type="submit" href="#about">Submit</a>
         </form>
       </div>
     </div>
