--- a/www.hookamonk.com/src/html/v2/index.njk
+++ b/www.hookamonk.com/src/html/v2/index.njk
@@ -42,9 +42,7 @@
           <p class="title__prefix">We present warp</p>
           <h1>Game <span class="text--orange"><strong>changer</strong></span> in hookah world</h1>
           <p class="title__suffix">First fully electronic hookah set for tobacco.</p>
-          <button class="button button__contained button__contained--dark">
-            <a href="#features" class="button__label">Discover more</a>
-          </button>
+          <a class="button button__contained button__contained--light button__label" href="#features">Discover more</a>
         </div>
       </div>
     </div>
@@ -477,9 +475,7 @@
              ✓ No hidden charges<br>
              ✓ For personal use only
              </p>
-          <button class="button button__contained button__contained--white">
-            <a href="mailto:sales@hookamonk.com?subject=I want Warp for home" class="button__label">Next</a>
-          </button>
+          <a class="button button__contained button__contained--light" href="mailto:sales@hookamonk.com?subject=I want Warp for home" class="button__label">Next</a>
         </div>
         <div class="hm-warp__type hm-warp__type--b2c mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop zoom">
           <h3>For workspace</h3>
@@ -488,17 +484,13 @@
             ✓ Transparent pricing<br>
             ✓ Additional services
             </p>
-          <button class="button button__contained button__contained--white">
-            <a href="mailto:sales@hookamonk.com?subject=I want Warp for workspace" class="button__label">Next</a>
-          </button>
+          <a class="button button__contained button__contained--light" href="mailto:sales@hookamonk.com?subject=I want Warp for workspace" class="button__label">Next</a>
         </div>
          <div class="hm-warp__type hm-warp__type--b2d mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop zoom">
           <h3>For hookah lounge</h3>
            <p>✓ No initial down payment<br>
             ✓ Monthly payments based on the number of Warp sessions served</p>
-          <button class="button button__contained button__contained--white">
-            <a href="mailto:sales@hookamonk.com?subject=I want Warp for hookah lounge" class="button__label">Next</a>
-          </button>
+          <a class="button button__contained button__contained--light" href="mailto:sales@hookamonk.com?subject=I want Warp for hookah lounge" class="button__label">Next</a>
         </div>
       </div>
     </div>
