--- a/www.hookamonk.com/src/stylesheets/v2/for-home.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/for-home.scss
@@ -2,15 +2,15 @@ h2 {
   font-weight: 600;
 }
 .for-home-intro {
+  h1 {
+    font-weight: bold;
+  }
   ul {
     list-style: none;
     li {
-      color: var(--hm-grey);
+      color: var(--hm-white);
       line-height: 36px;
     }
-  }
-  button a {
-    color: var(--hm-white);
   }
 }
 .hm-warp {
