--- a/www.hookamonk.com/src/stylesheets/v2/for-workspace.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/for-workspace.scss
@@ -3,17 +3,15 @@ h2 {
 }
 
 .for-home-intro {
+  h1 {
+    font-weight: bold;
+  }
   ul {
     list-style: none;
-
     li {
-      color: var(--hm-grey);
+      color: var(--hm-white);
       line-height: 36px;
     }
-  }
-
-  button a {
-    color: var(--hm-white);
   }
 }
 
