Hookamonk - změna na stránkách

--- a/www.hookamonk.com/src/html/for-home/index.njk
+++ b/www.hookamonk.com/src/html/for-home/index.njk
@@ -32,12 +32,12 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <h1>For Home</h1>
           <ul>
-            <li>✔︎ Fixed monthly fee</li>
-            <li>✔︎ Transparent pricing</li>
-            <li>✔︎ No hidden charges</li>
-            <li>✔︎ For personal use only</li>
+            <li>✓ Fixed monthly fee</li>
+            <li>✓ Transparent pricing</li>
+            <li>✓ No hidden charges</li>
+            <li>✓ For personal use only</li>
           </ul><br>
-          <a class="button button__contained button__contained--light" href="#hm-warp">Next</a>
+          <a class="button button__contained button__contained--light" href="#hm-warp">Next</a><br>
         </div>
         <div
           class="hm-intro__header-bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop wow bounceInLeft zoom">
@@ -113,7 +113,7 @@
 {#      </div>#}
 {#    </div>#}
 {#  </section>#}
-<section class="hm-submit-form">
+<section class="hm-submit-form hm-submit-form_bg">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner hm-layout-wrapper">
       <div class="hm-submit-form__content mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop">
