--- a/www.hookamonk.com/src/html/v2/footer.njk
+++ b/www.hookamonk.com/src/html/v2/footer.njk
@@ -3,16 +3,16 @@
     <div class="mdc-layout-grid__inner hm-layout-wrapper">
       <div class="footer__list mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop">
         <ul>
-          <li><a href="#about">Hookamonk story</a></li>
-          <li><a href="#features">Key features</a></li>
-          <li><a href="#warp">I want Warp</a></li>
-          <li><a href="#catering">Hookah catering</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="/#about">Hookamonk story</a></li>
+          <li><a href="/#features">Key features</a></li>
+          <li><a href="/#warp">I want Warp</a></li>
+          <li><a href="/#catering">Hookah catering</a></li>
+          <li><a href="mailto:sales@hookamonk.com">Contact</a></li>
         </ul>
       </div>
       <div class="footer__list mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop">
         <ul>
-          <li><a href="#testimonials">FAQ</a></li>
+          <li><a href="/#testimonials">FAQ</a></li>
           <li><a href="https://shop.hookamonk.com/">Shop</a></li>
           <li><a href="https://www.animahookah.com/">Anima</a></li>
           <li><a href="https://shop.hookamonk.com/nebulla/">Nebulla</a></li>
