--- a/www.hookamonk.com/src/html/for-lounge/index.njk
+++ b/www.hookamonk.com/src/html/for-lounge/index.njk
@@ -4,141 +4,105 @@
 {% set language = en %}
 
 {% block title %}
-Hookamonk for Workspace
+  Hookamonk for Workspace
 {% endblock %}
-
 {% block head %}
-<meta name="description"
-      content="First fully electronic hookah for tobacco.">
-<meta name="twitter:description" property="og:description"
-      content="First fully electronic hookah for tobacco.">
-<link rel="canonical" href="https://www.hookamonk.com/">
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@topmonks">
-<meta name="twitter:title" property="og:title" content="Game changer in hookah.">
-<meta name="twitter:image" property="og:image" content="https://www.hookamonk.com/og-image.jpg">
-<meta property="og:type" content="company">
-<meta property="og:url" content="https://www.hookamonk.com/">
-<meta property="og:site_name" content="hookamonk.com">
+  <meta name="description"
+        content="First fully electronic hookah for tobacco.">
+  <meta name="twitter:description" property="og:description"
+        content="First fully electronic hookah for tobacco.">
+  <link rel="canonical" href="https://www.hookamonk.com/">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@topmonks">
+  <meta name="twitter:title" property="og:title" content="Game changer in hookah.">
+  <meta name="twitter:image" property="og:image" content="https://www.hookamonk.com/og-image.jpg">
+  <meta property="og:type" content="company">
+  <meta property="og:url" content="https://www.hookamonk.com/">
+  <meta property="og:site_name" content="hookamonk.com">
 {% endblock %}
 
 {% block content %}
-{{ css("v2/typography") }}
-{{ css("v2/main") }}
-{{ css("v2/for-workspace") }}
-<section class="hm-intro for-home-intro">
-  <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid__inner hm-layout-wrapper">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-        <h1>For hookah lounge</h1>
-        <ul>
-          <li>✔︎ No initial down payments</li>
-          <li>✔︎ Monthly payments based on the number of Warp sessions&nbsp;served</li>
-          <li>✔︎ We earn when you earn, we earn when you have customers enjoying Warp sessions
-            at your&nbsp;place</li>
-        </ul>
-        <a class="button button__contained button__contained--light" href="#hm-warp">Next</a>
-      </div>
-      <div
-        class="hm-intro__header-bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop wow bounceInLeft zoom">
-        <img title="Hookamonk product photo"
-             alt="[photo] Hookamonk product photo"
-             width="600px"
-             src="{{ "/hookamonk.com/img_for-workspace.png" | cloudinaryUrl(width=600) }}"
-        srcset="{{ "/hookamonk.com/img_for-workspace.png" | cloudinaryUrl(width=600) }} 1x,
-        {{ "/hookamonk.com/img_for-workspace.png" | cloudinaryUrl(width=600,dpr=1.5) }} 1.5x,
-        {{ "/hookamonk.com/img_for-workspace.png" | cloudinaryUrl(width=600,dpr=2) }} 2x"/>
-      </div>
-    </div>
-  </div>
-</section>
-{{ css("v2/catering") }}
-<section id="hm-warp" class="hm-warp">
-  <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid__inner hm-layout-wrapper">
-      <div class="hm-about__text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Looking for a <span class="text--orange">new</span></h2>
-        <p>Unique element for your office, agency, hub or a business event?</p>
-        <p>Whether you like to enjoy smoking hookah by yourself, with your colleagues & friends or business partners,
-          it can help you concentrate on your tasks, improve your productivity, set a rather informal atmosphere for
-          your meetings and establish closer relationships.</p>
-      </div>
-      <div class="hm-about__img mdc-layout-grid__cell mdc-layout-grid__cell--span-12 wow flipInX">
-        <img title="Hookamonk while using photo"
-             alt="[photo] Hookamonk while using photo"
-             width="800px"
-             src="{{ "/hookamonk.com/img_product-space.png" | cloudinaryUrl(width=800) }}"
-        srcset="{{ "/hookamonk.com/img_product-space.png" | cloudinaryUrl(width=800) }} 1x,
-        {{ "/hookamonk.com/img_product-space.png" | cloudinaryUrl(width=400,dpr=1.5) }} 1.5x,
-        {{ "/hookamonk.com/img_product-space.png" | cloudinaryUrl(width=400,dpr=2) }} 2x"/>
-      </div>
-    </div>
-  </div>
-</section>
-<section id="" class=" qt  wow pulse">
-  <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid__inner hm-layout-wrapper">
-      <div class="order-1 mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-        <h2>Lorem <span class="text--orange">Warp</span></h2>
-        <h3>Fringilla ipsum tincidunt</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fringilla ipsum tincidunt proin tellus
-          vestibulum
-          scelerisque eu.</p>
-      </div>
-      <div class="order-2 mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-        <img title="Hookamonk while using photo"
-             alt="[photo] Hookamonk while using photo"
-             width="600px"
-             src="{{ "/hookamonk.com/img_for-home-2.png" | cloudinaryUrl(width=600) }}"
-        srcset="{{ "/hookamonk.com/img_for-home-2.png" | cloudinaryUrl(width=600) }} 1x,
-        {{ "/hookamonk.com/img_for-home-2.png" | cloudinaryUrl(width=600,dpr=1.5) }} 1.5x,
-        {{ "/hookamonk.com/img_for-home-2.png" | cloudinaryUrl(width=600,dpr=2) }} 2x"/>
+  {{ css("v2/typography") }}
+  {{ css("v2/main") }}
+  {{ css("v2/for-workspace") }}
+  {{ css("v2/catering") }}
+  {{ css("v2/for-lounge") }}
 
+  <section class="hm-intro for-home-intro">
+    <div class="mdc-layout-grid">
+      <div class="mdc-layout-grid__inner hm-layout-wrapper">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+          <h1>For hookah lounge</h1>
+          <ul>
+            <li>✓ No initial down payments</li>
+            <li>✓ Monthly payments based on the number of Warp sessions&nbsp;served</li>
+            <li>✓ We earn when you earn, we earn when you have customers enjoying Warp sessions
+              at your&nbsp;place
+            </li>
+          </ul>
+          <a class="button button__contained button__contained--light" href="#hm-warp">Next</a><br>
+        </div>
+        <div
+          class="hm-intro__header-bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop wow bounceInLeft zoom">
+          <img title="Hookamonk product photo"
+               alt="[photo] Hookamonk product photo"
+               width="600px"
+               src="{{ "/hookamonk.com/img_for_hookah_lounge.png" | cloudinaryUrl(width=600) }}"
+               srcset="{{ "/hookamonk.com/img_for_hookah_lounge.png" | cloudinaryUrl(width=600) }} 1x,
+        {{ "/hookamonk.com/img_for_hookah_lounge.png" | cloudinaryUrl(width=600,dpr=1.5) }} 1.5x,
+        {{ "/hookamonk.com/img_for_hookah_lounge.png" | cloudinaryUrl(width=600,dpr=2) }} 2x"/>
+        </div>
       </div>
-      <div class="order-4 mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-        <img title="Hookamonk while using photo"
-             alt="[photo] Hookamonk while using photo"
-             width="600px"
-             src="{{ "/hookamonk.com/img_for-home-3.png" | cloudinaryUrl(width=600) }}"
-        srcset="{{ "/hookamonk.com/img_for-home-3.png" | cloudinaryUrl(width=600) }} 1x,
-        {{ "/hookamonk.com/img_for-home-3.png" | cloudinaryUrl(width=600,dpr=1.5) }} 1.5x,
-        {{ "/hookamonk.com/img_for-home-3.png" | cloudinaryUrl(width=600,dpr=2) }} 2x"/>
+    </div>
+  </section>
+  <section class="hm-submit-form">
+    <div class="mdc-layout-grid">
+      <div class="mdc-layout-grid__inner hm-layout-wrapper">
+        <div class="hm-submit-form__content mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop">
+          <h2>Get in <span class="text--orange">Touch</span></h2>
+          <div id="contact-container">
+            <form id="contact-form" action="https://hookamonk-api.monks.cloud/v1/contact-form" method="POST">
+              <input type="hidden" name="productName" value="Warp for home"/>
+              <input type="hidden" name="productUrl" value="for-home"/>
+              <input type="text" name="name" placeholder="Name" required/>
+              <input type="text" name="email" placeholder="Email" required/>
+              <input type="number" name="telephone" placeholder="Telephone"/>
+              <textarea rows="4" cols="50" name="message" form="contact-form" placeholder="Enter text here..."></textarea><br>
+              <a class="button button__contained button__contained--light" type="submit">Submit</a>
+            </form>
+          </div>
+          <script type="module">
+            const contactForm = document.getElementById("contact-form");
+            contactForm.addEventListener("submit", async e => {
+              e.preventDefault();
+              const button = e.target.querySelector("button");
+              button.disabled = true;
+              const formData = new FormData(e.target);
 
-      </div>
-      <div class="order-3 mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
-        <h2>Lorem <span class="text--orange">Warp</span></h2>
-        <h3>Fringilla ipsum tincidunt</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fringilla ipsum tincidunt proin tellus
-          vestibulum
-          scelerisque eu.</p>
-      </div>
-    </div>
-  </div>
-</section>
-<section id="" class="hm-submit-form">
-  <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid__inner hm-layout-wrapper">
-      <div class="hm-submit-form__content mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop">
-        <h2>Lorem <span class="text--orange">Ipsum</span></h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fringilla ipsum tincidunt proin tellus vestibulum
-          scelerisque eu.</p>
-        <form>
-          <input type="text" name="name" placeholder="Name" required>
-          <input type="text" name="email" placeholder="Email" required>
-          <input type="number" name="phone" placeholder="Telephone" required>
-          <textarea rows="4" cols="50" name="comment" form="usrform" placeholder="Enter text here..."></textarea><br>
-          <a class="button button__contained button__contained--light" type="submit" href="#about">Submit</a>
-        </form>
+              let data = {};
+              formData.forEach((value, key) => data[key] = value);
+
+              const contactContainer = document.getElementById("contact-container");
+              contactContainer.innerHTML = `<div class="hm-check-icon">✔︎</div><p>Thank you, your request has been sent and we will get back to you as soon as possible.</p> <h4>Hookamonk team</h4>`
+
+              await fetch(e.target.action, {
+                method: e.target.method.toUpperCase(),
+                body: JSON.stringify(data),
+                mode: "no-cors"
+              });
+
+            })
+          </script>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
 
 {% endblock %}
 
 {% block footer %}
-{{ css("v2/footer") }}
-{% include "./v2/footer.njk" %}
+  {{ css("v2/footer") }}
+  {% include "./v2/footer.njk" %}
 {% endblock %}
 
