--- a/www.hookamonk.com/src/html/v2/for-workspace/index.njk
+++ b/www.hookamonk.com/src/html/v2/for-workspace/index.njk
@@ -32,10 +32,10 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
           <h1>For <span class="text--orange"><strong>Home</strong></span></h1>
           <ul>
-            <li>✔︎ No initial down payment</li>
-            <li>✔︎ Monthly rental charge</li>
-            <li>✔︎ Transparent pricing</li>
-            <li>✔︎ Additional services</li>
+            <li>✓ No initial down payment</li>
+            <li>✓ Monthly rental charge</li>
+            <li>✓ Transparent pricing</li>
+            <li>✓ Additional services</li>
           </ul>
           <a class="button button__contained button__contained--light" href="#hm-warp">Next</a>
         </div>
