--- a/www.hookamonk.com/src/stylesheets/v2/typography.scss
+++ b/www.hookamonk.com/src/stylesheets/v2/typography.scss
@@ -62,12 +62,10 @@ body {
 }
 
 ul {
-  padding-inline-start: 0px;
+  padding-inline-start: 0;
 }
 
 // Typography: Phones and Tablets //
-@media (max-width: 839px) {
-}
 
 a {
   text-decoration: none;
@@ -100,18 +98,14 @@ p {
 }
 
 a.button {
+  font-family: "Poppins", -apple-system;
   font-weight: 700;
   text-decoration: none;
+  padding: 14px 60px;
 
   &:hover {
     cursor: pointer;
   }
-
-  @media (max-width: 479px) {
-    width: 100%;
-    height: 60px;
-  }
-
   &:disabled {
     opacity: 50%;
   }
@@ -121,10 +115,6 @@ a.button__contained {
   border: none;
   border-radius: 4px;
   font-size: 18px;
-
-  @media (min-width: 480px) {
-    padding: 14px 60px;
-  }
 }
 
 
@@ -162,18 +152,6 @@ a.button__contained--light {
   }
 }
 
-.button__contained--green {
-  background-color: var(--hm-green);
-
-  a {
-    color: var(--hm-grey--dark);
-  }
-
-  &:hover {
-    background-color: var(--hm-green--light);
-    transition: all 0.8s;
-  }
-}
 
 //Animations
 @charset "UTF-8";
