Hookamonk - změna cesty pro link "next"

--- a/www.hookamonk.com/src/html/for-lounge/index.njk
+++ b/www.hookamonk.com/src/html/for-lounge/index.njk
@@ -40,7 +40,7 @@
               at your&nbsp;place
             </li>
           </ul>
-          <a class="button button__contained button__contained--light" href="#hm-warp">Next</a><br>
+          <a class="button button__contained button__contained--light" href="/#hm-warp">Next</a><br>
         </div>
         <div
           class="hm-intro__header-bg mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop wow bounceInLeft zoom">
