--- a/meetvers.io/src/stylesheets/main.scss
+++ b/meetvers.io/src/stylesheets/main.scss
@@ -6,12 +6,72 @@
   --mdc-layout-grid-column-width-desktop: 60px;
 }
 
+// General styles
 .layout-wrapper {
   max-width: 1200px;
   margin: 0 auto;
 }
 
+.title__prefix {
+
+}
+
+.title__suffix {
+  max-width: 760px;
+  margin: 0 auto;
+}
+
+.box {
+  padding: 16px 32px;
+
+  p {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+  }
+}
+
+.box--light {
+  background-color: var(--primary);
+  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
+
+  h3 {
+    background: linear-gradient(73.63deg, #E30D7F -18.26%, #0B050F 44.46%, #2A2962 100.96%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  p, li {
+    color: var(--grey);
+  }
+}
+
+.box--dark {
+  background: linear-gradient(73.63deg, #E30D7F -18.26%, #0B050F 44.46%, #2A2962 100.96%);
+  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
+}
+
+
 // Section Intro
+.intro {
+  h1 {
+    width: 881px;
+  }
+  p {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 39px;
+    width: 682px;
+    margin: 0;
+  }
+
+  .countdown p {
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 29px;
+    opacity: 0.77;
+  }
+}
 //
 
 // Section About
@@ -19,6 +79,9 @@
   text-align: center;
   max-width: 760px;
   margin: 0 auto;
+  .title__prefix {
+    font-family: 'VT323', monospace;
+  }
 }
 
 //
@@ -43,34 +106,115 @@
       }
     }
   }
+}
 
-  .network__box {
-    padding: 16px 32px;
-    p {
-      font-size: 18px;
-      font-weight: 400;
-      line-height: 30px;
-    }
+//
+
+// Section Token
+.token {
+  .token__intro {
+    text-align: center;
   }
 
-  .network__box--light {
-    background-color: var(--primary);
-    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
-
-    h3 {
-      color: var(--dark-grey);
-    }
-
-    p {
-      color: var(--grey);
-    }
+  p.title__prefix {
+    margin-bottom: 0;
   }
 
-  .network__box--dark {
-    background: linear-gradient(73.63deg, #E30D7F -18.26%, #0B050F 44.46%, #2A2962 100.96%);
-    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.08);
+  h3 {
+    margin-top: 0;
   }
 }
 
 //
 
+// Section Supply
+.supply {
+  h2 {
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 40px;
+    text-align: center;
+    background: linear-gradient(73.63deg, #E30D7F -18.26%, #0B050F 44.46%, #2A2962 100.96%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-fill-color: transparent;
+  }
+
+  .supply__content {
+    --mdc-layout-grid-gutter-desktop: 0;
+  }
+
+  .box--light {
+    h3 {
+      margin-bottom: 0;
+    }
+  }
+
+  .box--light h3, .box--dark h3 {
+    margin-bottom: 0;
+  }
+
+  .box--light p, .box--dark p {
+    margin-top: 0;
+  }
+}
+
+//
+
+// Section System
+.system {
+  --mdc-layout-grid-gutter-desktop: 0;
+  ul {
+    padding-left: 14px;
+
+    li {
+      font-size: 18px;
+      line-height: 40px;
+    }
+  }
+
+  .box {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12);
+  }
+
+  .box__shadow {
+    padding: 120px 60px;
+    text-align: center;
+    align-self: center;
+    justify-self: self-end;
+    background: rgba(255, 255, 255, 0.77);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12);
+    backdrop-filter: blur(20px);
+
+    h2 {
+      font-size: 40px;
+      font-weight: 400;
+      background: linear-gradient(73.63deg, #E30D7F -18.26%, #0B050F 44.46%, #2A2962 100.96%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-fill-color: transparent;
+    }
+  }
+
+  .box--light {
+    li {
+      color: var(--dark-grey)
+    }
+  }
+}
+
+.supply, .visualization {
+  h2 {
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 40px;
+    text-align: center;
+    background: linear-gradient(73.63deg, #E30D7F -18.26%, #0B050F 44.46%, #2A2962 100.96%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-fill-color: transparent;
+  }
+}
+//
+
+//
